--- a/Personal Portfolio Website [CodingNepal]/style.css
+++ b/Personal Portfolio Website [CodingNepal]/style.css
@@ -375,11 +375,11 @@ section .title::after{
 .skills-content .right .mysql::before{
     width: 70%;
 }
-asfsdfsad
+asfsdfsadasfdsadfsdf
 /* teams section styling */
 .teams .title::after{
-    content: "who with me";
-}
+    content: "who with measdfsaf";
+}sdfsadf
 .teams .carousel .card{
     background: #222;
     border-radius: 6px;
